# trinity-twstock

./: .gitignore  .opencode.json  AGENTS.md  AI_BOOTSTRAP.md  CLAUDE.md  CURRENT_TASK.md  MIGRATION_main_py.md  PROJECT_AUDIT.md  README.md  TASK_DIRECTIVE.md  _api_test.py  _backup_ai.ts  _backup_mvpMcpRoutes.ts  _backup_routes_crlf.ts  ai-rules.txt  api-response-example.json  auto-iterate-forever.ps1  auto-iterate-forever.sh  auto-iterate.ps1  auto-iterate.sh  check-node.ps1  check-server.ps1  check_skills.ps1  check_superpowers.ps1  coverage_report.txt  create_ui.ps1  db_admin.py  dependency_map.txt  extract_superpowers.ps1  find_superpowers.ps1  head_routes.ts  index.html  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  server.ts  tsconfig.json  twse-app.rar  verify_fixes.mjs  (+2 more)
.ai-memory/: governance-exclude.txt
.gemini/: settings.json
.qoder/: mcp.json  settings.json
TWSEMCPServer-main/TWSEMCPServer-main/: .dockerignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README_en-us.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
TWSEMCPServer-main/TWSEMCPServer-main/staticFiles/: apis_summary_simple.json  swagger_api_summary.json  swagger_decoded.json
audit/: FINAL_REPORT.md  repository.md  structure.md
docs/: ssl-health-check.md
model/: __init__.py  kronos.py  module.py
scripts/: __init__.py  backfill_indicators.py  check_db_report.py  check_supabase.js  complete_and_fetch_today.js  fetch_today_only.js  final_audit.py  get_fields.py  pull_from_supabase.js  setup_database.py  syncData.ts  sync_to_supabase.py
(+500 files in other folders)
