[project]
name = "twstockmcpserver"
version = "0.1.0"
description = "A MCPServer for partial APIs of the Taiwan Stock Exchange OpenAPI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp==2.12.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.3",
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.21.0",
    "pytest-rerunfailures>=14.0",
]
